# secluso-core

./: .dockerignore  .gitignore  README.md
.github/workflows/: binaries-reproducibility-check.yml  macos-deploy-app.yml  windows-deploy-app.yml
app_native/: Cargo.toml
app_native/examples/: app.rs
app_native/src/: lib.rs
camera_hub/: Cargo.toml
camera_hub/src/: config.rs  main.rs  pairing.rs  version.rs
camera_hub/src/pairing/: flow.rs  general.rs  io.rs  mod.rs  wifi.rs
client_lib/: Cargo.toml
client_lib/src/: config.rs
client_server_lib/: Cargo.toml
config_tool/: Cargo.toml
deploy/: README.md  package.json  release-source-date-epoch.txt  svelte.config.js
deploy/src-tauri/: Cargo.toml  tauri.conf.json
deploy/src-tauri/src/: lib.rs  release_config.rs
deploy/src/lib/: api.ts
motion_ai/cli/: Cargo.toml
motion_ai/pipeline/: Cargo.toml
releases/: .gitignore  Dockerfile.deploy  digests.lock.env  sign_macos_release.sh  verify_macos_release.sh  verify_windows_release.sh
releases/lib/: common.bash  compare.bash  deploy_helpers.bash  deploy_pipeline.bash  plan.bash  rust_pipeline.bash
reset/: Cargo.toml
scripts/: secluso_manual_relay_install.sh
server/: Cargo.toml
server/src/: main.rs
server_backbone/: Cargo.toml
tester/: Cargo.toml
toggle/: Cargo.toml
update/: Cargo.toml
update/binary-updater/: Cargo.toml
update/os-updater/: Cargo.toml
update/os-updater/src/: bootloader.rs  main.rs
update/scripts/: README.md  secluso_build_bundle.sh  secluso_prepare_release_dir.sh  secluso_sign_checksums.sh
update/src/: lib.rs  main.rs
(+20 files in other folders)
